# diceware

./: .gitignore  CHANGELOG.md  README.md
diceware/: Cargo.toml
diceware-cli/: Cargo.toml
diceware-cli/src/: main.rs
diceware/src/: lib.rs
diceware/src/embedded/: italian.rs  mod.rs
