[package]
name = "diceware-cli"
version = "2.0.0"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>", "LucioPg <ldc-productions@proton.me>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A Diceware passphrase generator CLI."

[dependencies]
clap = { version = "3.2", features = ["derive"] }
diceware = { path = "../diceware" }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }

[[bin]]
name = "diceware"
path = "src/main.rs"
