[package]
name = "diceware"
version = "2.0.0"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>", "LucioPg <ldc-productions@proton.me>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A Diceware passphrase generator."

[dependencies]
rand = "0.8"
unicode-segmentation = "1.2"

[dev-dependencies]
proptest = "1.0"
